--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,27 @@
 
 *{
     margin: 0;
+    padding: 0;
+    font-family: "Poppins" , sans-serif;
+    box-sizing: border-box;
 }
 body {
     background: rgba(50, 48, 49, 1);
-    font-family: "Poppins" , sans-serif;
-
 }
 
-body h2 {
-   font-size: 14px;
-   font-weight: 600;
+.container {
+    
+   width: 300px; 
+   display: inline-block;
+    /* Set width to fit in one row */
+   padding: 0px;
+   margin-right: 10px;
+   /* background-color: lightcoral; */
 }
 
-h2 {
-    color: black; 
-}
-
-.card {
+.transparentcontainer {
+    position: absolute;
+    right: 0;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
@@ -27,9 +31,77 @@ h2 {
     margin-top: 5px;
     margin-left: 80px;
     margin-right: 80px;
+    color: #fff;
+   
+}
+
+.info {
+    display: flex;
+}
+
+.text {
+    width: 600px;
+    margin-left: 30px;
+}
+
+.enterarea {
+   position: relative;
+   height: 40px;
+   line-height: 40px; 
+   margin: 10px 0;
+   /* background: red; */
+}
+
+input  {
+    position: absolute;
+    width: 100%;
+    outline: none;
+    font-size: 14;
+    padding: 0 10px;
+    line-height: 40px;
+    border-radius: 10px;
+    border: 2px solid #111;
+    background: transparent;
+    transition: 0.1s ease;
+    z-index: 1111;
+}
+
+input:focus + .labelline,
+input:valid + .labelline{
+    color: rgba(50, 48, 49, 1);
+    height: 30px;
+    line-height: 30px;
+    padding: 0 4px;
+    transform: translate(-15px, -18px) scale(0.88);
+    z-index: 1111;
+}
+
+input:focus,
+input:valid{
+    /* color: #66ff00; */
+    border: 2px solid rgba(50, 48, 49, 1);
+}
+
+.labelline {
+    position: absolute;
+    font-size: 14;
+    color: black;
+    margin: 3px 25px;
+    background-color: #fff;
+    transition: 0.1s ease;
+}
+
+.card {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 80px;
+    margin-right: 80px;
     background: #fff;
     border-radius: 4px;
-    border: 4px;
     border-color: rgb(0, 0, 0);
     /* background-color: #45b9ac; */
     background-color: rgba(10, 10, 10, 0,1);
@@ -37,10 +109,10 @@ h2 {
 
 .card1 ,.card2, .card3 {
     /* flex: 1; */
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin-left: 5px; 
     margin-right: 5px;
     background: #fff;
@@ -50,6 +122,7 @@ h2 {
     /* background-color: #45b9ac; */
     background-color: rgba(10, 10, 10, 0,1);
 }
+
 
 .flex1 {
     flex:2
@@ -68,14 +141,14 @@ h2 {
     display: flex;
 }
 
-.backgroundpickture {
-    /* background-image: url("https://t4.ftcdn.net/jpg/02/55/74/39/240_F_255743996_RNm9QJcQkBQGLVTUOljw7i68jK2C8NsP.jpg"); */
+/* .backgroundpickture {
+
     background: rgba(50, 48, 49, 1);
     padding: 10px ;
     color: #fff;
     margin-left: 80px;
     margin-right: 80px;
-}
+} */
 
 .image {
     height: 130px; 
